<resources>
    <string name="app_name">My Application</string>
    <string name="hello_world">Hello World!!!</string>
    <string name="button">BUTTON</string>
    <string name="android">Android</string>
    <string name="one">One</string>
    <string name="test1">A cousin of the narrative essay, a descriptive essay paints a picture with words. A writer might describe a person, place, object, or even memory of special significance. However, this type of essay is not description for description’s sake. The descriptive essay strives to communicate a deeper meaning through the description. In a descriptive essay, the writer should show, not tell, through the use of colorful words and sensory details. The best descriptive essays appeal to the reader’s emotions, with a result that is highly evocative.A cousin of the narrative essay, a descriptive essay paints a picture with words. A writer might describe a person, place, object, or even memory of special significance. However, this type of essay is not description for description’s sake. The descriptive essay strives to communicate a deeper meaning through the description. In a descriptive essay, the writer should show, not tell, through the use of colorful words and sensory details. The best descriptive essays appeal to the reader’s emotions, with a result that is highly evocative.with a result that is highly evocative.A cousin of the narrative essay, a descriptive essay paints a picture with words. A writer might describe a person, place, object, or even memory of special significance. However, this type of essay is not description for description’s sake. The descriptive essay strives to communicate a deeper meaning through the description. In a descriptive essay, the writer should show, not tell, through the use of colorful words and sensory details. The best descriptive essays appeal to the reader’s emotions, with a result that is highly evocative.</string>

    <string name="cr7">CR7</string>

</resources>