<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    xmlns:android="http://schemas.android.com/apk/res/android" >

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:text="@string/hello_world"
        android:textSize="40sp"
        android:textColor="#E91E63"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button"
        android:background="#03A9F4"
        android:textColor="@android:color/holo_blue_bright"
        android:layout_marginTop="30dp"
        android:paddingLeft="40dp"
        android:paddingRight="40dp"
        android:layout_marginStart="30dp"/>
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button"
        android:background="#03A9F4"
        android:textColor="@android:color/holo_blue_bright"
        android:layout_marginTop="30dp"
        android:paddingLeft="40dp"
        android:paddingRight="40dp"
        android:layout_marginStart="30dp"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/android"
        android:textSize="20sp"
        android:textColor="#2196F3"/>


</LinearLayout>